Kleopatra: ignores its own language settings for the filter names
Testing, NormalPublic

Assigned To
Authored By
ebo
Apr 17 2025, 12:06 PM
Subscribers

Description

On Windows, Kleopatra ignores the language settings made in Kleopatra itself and instead seems to use the language configured for the system.

The screenshot shows the filters with English language configured in Kleopatra and Windows system language German.

Another screenshot with KF6 version and German in Kleo with EN Windows system language:

This is after restarting Kleopatra, of course.
For all filters defined in the libkleopatrarc the system language setting is used, for the others the language used is the one configured in Kleo.
Probably a kconfig issue.

Related ticket: T3733: Kleopatra, Libgpg-error: Let the GUI change the language on Windows That one is for GpgOL/EX

Details

Version
VSD 3.3.1, Gpg4win-5.0.0-beta145

Event Timeline

ebo triaged this task as Normal priority.Apr 17 2025, 12:06 PM
ebo created this task.
ikloecker moved this task from Backlog to WIP on the gpd5x board.
ikloecker changed the task status from Open to Testing.Jun 30 2025, 4:49 PM
timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta345 @ win10

Kleopatra: EN, Windows: DE

Backported for VSD 3.4

Hint for testing: Instead of changing the language in Kleopatra (make sure to reset this to default) also try to change the "Windows display language" in Windows's Language settings. I think it's more likely that the customers change this setting instead of just the setting in Kleopatra.
Note: Changing the Preferred language (for apps and websites) in Windows's Language settings doesn't seem to have an effect on Kleopatra (from Gpg4win 4/VSD 3.x), but that's okay because it's ignored for all texts.