Do not write filter names to libkleopatrarc

Users are not allowed to change the names of the filters and they cannot
create new filters. And writing the filter names to libkleopatrarc had
the unwanted side-effect that this burned translated filter names into
the libkleopatrarc overwriting the English default names.

GnuPG-bug-id: 7612